--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,30 @@ nav a {
     display: block;
     padding: 20px;
 }
+main { 
+    max-width: 840px;
+}
+aside{ 
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 0.2); /* 1 */
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+aside img{
+    width: 200px;
+    height: auto;
+}
+main img{
+    width: 150px;
+    height: auto;
+}
+p {
+    padding: 0;
+}
+
 h1 {
     color: darkblue;
 }
@@ -19,4 +43,9 @@ img {
 }
 p {
     padding: 10px;
+}
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
 }
