--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,8 @@ nav {
 }
 nav a {
     color: white;
-    display: block;
     padding: 20px;
-}
-main { 
-    max-width: 840px;
+    display: block;
 }
 h1 {
     color: darkblue;
@@ -17,12 +14,18 @@ h1 {
 main img{
     width: 150px;
     height: auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
 }
-aside{ 
-    width: 20rem;
-    margin: 1rem;
+p { 
+    padding: 0;
+}
+aside{
+    width: 20em;
+    margin: 1em;
     border: 1px solid rgb(0 0 0 / 0.2); /* 1 */
-    padding: 1rem;
+    padding: 1em;
     background-color: #eee;
     color: #333;
     text-align: center;
@@ -31,24 +34,8 @@ aside img{
     width: 200px;
     height: auto;
 }
-img {
-    width: 150px;
-    height: auto;
-    border: 1px solid black;
-    padding: 2px;
-    box-shadow: 0 0 30px gray;
-}
-p {
-    padding: 0;
-}
-
-
-
-p {
-    padding: 10px;
-}
 footer {
-    margin-top: 15px;
+    margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
 }
