--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,14 @@
 nav {
-    background-color: darkblue;
+    background-color: steelblue;
     padding: 10px;
 }
 nav a {
     color: white;
-    padding: 20px;
+    padding: 10px;
     display: block;
 }
 h1 {
-    color: darkblue;
+    color: steelblue;
 }
 
 main img{
@@ -24,7 +24,7 @@ p {
 aside{
     width: 20em;
     margin: 1em;
-    border: 1px solid rgb(0 0 0 / 0.2); /* 1 */
+    border: 1px solid rgba(0 0 0 / 0.2); /* 1 */
     padding: 1em;
     background-color: #eee;
     color: #333;
