--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 main img{
-    width: 150px;
+    max-width: 840px;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
