--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 main img{
-    max-width: 840px;
+    width: 150px;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
@@ -20,6 +20,9 @@ main img{
 }
 p { 
     padding: 0;
+}
+main {
+    max-width: 480px;
 }
 aside{
     width: 20em;
