--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,48 +12,84 @@
     --box-border: #0a66c2;
     --box-text: #1d2226;
     }
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    a {
+        color: var(--main-color);
+    }
+header, 
+.grid,
+footer {
+    max-width: 1200px;
+    margin: 0 auto;
+    }
 nav {
-    background-color: var(--main-color);
-    padding: 10px;
+    background-color: var(--nav-bg);
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 nav a {
-    color: white;
-    padding: 10px;
     display: block;
-}
-h1 {
-    color: var(--main-color);
-}
-
-main img{
-    width: 150px;
-    height: auto;
-    border: 1px solid var(--main-color);
-    padding: 2px;
-    box-shadow: 0 0 30px gray;
-}
-p { 
-    padding: 0;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: var(--nav-link);    
 }
 main {
-    max-width: 840px;
+    max-width: 50rem;
+    grid-column: 2/3;
+    margin: 1rem 0;
+    background: var(--accent-color);
+    color: var(--text-color);
+}
+h1 {
+    border-bottom: 1px solid var(--main-color);
+    color: var(--main-color);
 }
 aside{
-    width: 20em;
-    margin: 1em;
-    border: 1px solid rgba(0 0 0 / 0.2); /* 1 */
-    padding: 1em;
-    background-color: var(--box-bg);
-    color: #333;
-    text-align: center;
-}
+    max-width: 30rem;
+    position: relative;
+    }
 aside img{
-    width: 200px;
+    width: 100%;
     height: auto;
+    display: block;
+    }
+aside h2 {
+    position: absolute;
+    top: 70px;
+    left: 165px;
+    }
+main img{
+    width: 19rem;
+    height: auto;
+    margin: 1rem 0 1rem 1em;
+    float: right;
+}
+p { 
+    padding: 1rem;
+    color: var(--text-color);
 }
 footer {
-    margin-top: 1em;
-    border-top: 1px solid var(--border-color);
-    text-align: center;
-}
-Comment assignment.
+    background-color: var(--footer-bg);
+    color: var(--footer-text);
+    padding: 2rem 1rem;
+     }
+ul  {
+    list-style: none;
+    padding: 1rem;
+}   
+/* class selectors */
+.box{
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid var(--box-border);
+    color: var(--secundary-color);
+    background-color: var(--accent-color);
+} 
