--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,54 +17,29 @@
         padding: 0;
         box-sizing: border-box;
     }
-    a {
-        color: var(--main-color);
+    nav a {
+        display: block;
+        color: var(--accent-color);
+        text-decoration: none;
+        padding: 5px 10px;
+        background-color: var(--footer-bg);
     }
-header, 
-.grid,
-footer {
-    max-width: 1200px;
-    margin: 0 auto;
+    nav a:hover {
+        background-color: brown;
     }
-nav {
-    background-color: var(--nav-bg);
-    padding: 1rem;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-nav a {
-    display: block;
-    padding: 0.5rem;
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: 700;
-    color: var(--nav-link);    
-}
-main {
-    max-width: 50rem;
-    grid-column: 2/3;
-    margin: 1rem 0;
-    background: var(--accent-color);
-    color: var(--text-color);
-}
-h1 {
-    border-bottom: 1px solid var(--main-color);
-    color: var(--main-color);
-}
-aside{
-    max-width: 30rem;
-    position: relative;
+    nav {
+        background-color: var(--nav-bg);
+        padding: 1rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
     }
-aside img{
-    width: 100%;
-    height: auto;
-    display: block;
-    }
-aside h2 {
-    position: absolute;
-    top: 70px;
-    left: 165px;
+    main {
+        max-width: 50rem;
+        margin: 1rem 0;
+        background: var(--accent-color);
+        color: var(--text-color);
     }
 main img{
     width: 19rem;
@@ -72,24 +47,55 @@ main img{
     margin: 1rem 0 1rem 1em;
     float: right;
 }
-p { 
+h1 {
+    color: var(--main-color);
+    padding-bottom: 2px;
+    border-bottom: 2px solid var(--main-color);
+}
+aside {
+    max-width: 30rem;
+    position: relative;
+}
+aside img{
+    width: 100%;
+    height: auto;
+    display: block;
+}
+aside h2 {
+    position: absolute;
+    top: 2rem;
+    left: 5rem;
+}
+p {
     padding: 1rem;
     color: var(--text-color);
 }
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+.grid {
+    display: grid;
+    grid-template-columns: auto 300px;
+}
+
 footer {
     background-color: var(--footer-bg);
-    color: var(--footer-text);
     padding: 2rem 1rem;
-     }
-ul  {
+}
+
+footer p {
+    color: #fff;
+}
+ul {
     list-style: none;
     padding: 1rem;
-}   
+}
 /* class selectors */
-.box{
+.box {
     margin: 1rem;
     padding: 1rem;
-    border: 1px solid var(--box-border);
-    color: var(--secundary-color);
+    border: 1px solid #0a66c2;
+    color: var(--accent-color);
     background-color: var(--accent-color);
-} 
+}
