--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -16,10 +16,20 @@ header{
     padding: 0;
     box-sizing: border-box;
 }
+.grid {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
 body {
     font-family: var(--body-font);
     color: var(--accent1-color);
 }
+header {
+    display: grid;
+    align-content: center;
+}
+
 header, main, footer {
     width: 840px;
     margin: 0 auto;
@@ -28,9 +38,23 @@ h1, h2 {
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
-nav, p, section, article {
+section{
+    margin: 40px;
+}
+section figure{
+    display: flex;
+    gap: 40px;
+}
+article{
+    top: 100px;
+    position: absolute;
+}
+nav, p, article {
     margin: 16px;
     padding: 8px;
+    display: flex;
+    list-style: none;
+    gap: 20px;
 }
 .socialmedia a {
     text-decoration: none;
@@ -52,6 +76,9 @@ h1 {
     opacity: 0.7;
     background-color: var(--accent1-color);
     color: #fff;
+}
+footer {
+    display: flex;
 }
 .hero article img {
     float: right;
